# projeto_mercado

./: .env-example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: index.md
migrations/: env.py
migrations/versions/: 21c08c1b5665_criar_tabelas_usuarios_e_produtos.py
src/: alembic.ini  app.py  dependencias.py  models.py
src/core/: configuracoes.py  securanca.py  seguranca.py
src/core/config/: database.py
src/migrations/: env.py
src/migrations/versions/: c8b3af7652d3_criar_tabelas_de_usuarios_carrinhos_e_.py  e8f57ee61989_renomear_campo_produtos_da_tabela_.py
src/models/: models.py
src/repos/: repo_carrinho.py  repo_produtos.py  repo_usuario.py
src/routers/: admin_rotas.py  auth_rotas.py  carrinhos_rotas.py  produtos_rotas.py  usuarios_rotas.py
src/schemas/: schema_admin.py  schema_auth.py  schema_carrinho.py  schema_produto.py  schema_usuario.py  usuario.py
src/services/: admin_service.py  auth_criar.py  auth_service.py  carrinho_service.py  produtos_service.py  usuario_service.py
