[project]
name = 'projeto-mercado'

version = '0.1.0'

description = '''api rest para gerenciamento de produtos de mercado, 
desenvolvida com fastapi e sqlite, com autenticação jwt, hash de senhas 
e validação de força de senha com password_strength, 
além de paginação e controle de acesso por usuário.'''

authors = [
{name = 'Eric', email = 'ericjc16oficial@gmail.com'}
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations', '__pycache__', 'venv']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'
